y.output
   0  $accept : programa $end

   1  programa : conjunto_sentencias

   2  conjunto_sentencias : sentencia
   3                      | sentencia conjunto_sentencias

   4  sentencia : declarativa
   5            | ejecutable

   6  declarativa : dec_variable
   7              | dec_procedimiento

   8  dec_variable : tipo lista_variables ';'
   9               | tipo error ';'

  10  tipo : INTEGER
  11       | FLOAT

  12  lista_variables : ID
  13                  | ID ',' lista_variables

  14  dec_procedimiento : PROC ID '(' lista_parametros ')' NI '=' CTE_INT '{' conjunto_sentencias '}'
  15                    | PROC ID '(' ')' NI '=' CTE_INT '{' conjunto_sentencias '}'

  16  lista_parametros : parametro
  17                   | parametro ',' parametro
  18                   | parametro ',' parametro ',' parametro

  19  parametro : ID
  20            | VAR ID
  21            | VAR VAR ID

  22  ejecutable : asignacion
  23             | seleccion
  24             | salida
  25             | llamada
  26             | iteracion

  27  asignacion : ID '=' expresion ';'
  28             | ID COMP expresion ';'

  29  expresion : expresion '+' termino
  30            | expresion '-' termino
  31            | termino
  32            | expresion '+' '+' termino

  33  termino : termino '/' factor
  34          | termino '*' factor
  35          | factor
  36          | termino '/' '/' factor
  37          | termino '*' '*' factor

  38  factor : ID
  39         | CTE_INT
  40         | CTE_FLOAT
  41         | '-' CTE_INT
  42         | '-' CTE_FLOAT

  43  seleccion : IF '(' expresion comparador expresion ')' THEN bloque_ejecutables END_INF
  44            | IF '(' expresion comparador expresion ')' THEN bloque_ejecutables ELSE bloque_ejecutables END_INF
  45            | IF '(' expresion comparador expresion THEN bloque_ejecutables END_INF
  46            | IF '(' expresion comparador expresion THEN bloque_ejecutables ELSE bloque_ejecutables END_INF

  47  comparador : '<'
  48             | '>'
  49             | COMP
  50             | MAYOR_IGUAL
  51             | MENOR_IGUAL
  52             | DISTINTO

  53  bloque_ejecutables : ejecutable
  54                     | '{' ejecutable '}'
  55                     | '{' ejecutable bloque_ejecutables '}'

  56  salida : OUT '(' CADENA ')' ';'

  57  llamada : ID '(' parametros ')' ';'
  58          | ID '(' ')' ';'
  59          | ID '(' parametros ';'

  60  parametros : ID
  61             | ID ',' ID
  62             | ID ',' ID ',' ID

  63  iteracion : FOR '(' ID '=' CTE_INT ';' ID comparador expresion ';' incr_decr CTE_INT ')' bloque_ejecutables
  64            | FOR '(' ID '=' CTE_INT ID comparador expresion ';' incr_decr CTE_INT ')' bloque_ejecutables
  65            | FOR '(' ID '=' CTE_INT ';' ID comparador expresion incr_decr CTE_INT ')' bloque_ejecutables
  66            | FOR '(' ID '=' CTE_INT ID comparador expresion incr_decr CTE_INT ')' bloque_ejecutables

  67  incr_decr : UP
  68            | DOWN

state 0
	$accept : . programa $end  (0)

	IF  shift 1
	OUT  shift 2
	INTEGER  shift 3
	FLOAT  shift 4
	FOR  shift 5
	PROC  shift 6
	ID  shift 7
	.  error

	programa  goto 8
	conjunto_sentencias  goto 9
	sentencia  goto 10
	declarativa  goto 11
	ejecutable  goto 12
	dec_variable  goto 13
	dec_procedimiento  goto 14
	tipo  goto 15
	asignacion  goto 16
	seleccion  goto 17
	salida  goto 18
	llamada  goto 19
	iteracion  goto 20


state 1
	seleccion : IF . '(' expresion comparador expresion ')' THEN bloque_ejecutables END_INF  (43)
	seleccion : IF . '(' expresion comparador expresion ')' THEN bloque_ejecutables ELSE bloque_ejecutables END_INF  (44)
	seleccion : IF . '(' expresion comparador expresion THEN bloque_ejecutables END_INF  (45)
	seleccion : IF . '(' expresion comparador expresion THEN bloque_ejecutables ELSE bloque_ejecutables END_INF  (46)

	'('  shift 21
	.  error


state 2
	salida : OUT . '(' CADENA ')' ';'  (56)

	'('  shift 22
	.  error


state 3
	tipo : INTEGER .  (10)

	.  reduce 10


state 4
	tipo : FLOAT .  (11)

	.  reduce 11


state 5
	iteracion : FOR . '(' ID '=' CTE_INT ';' ID comparador expresion ';' incr_decr CTE_INT ')' bloque_ejecutables  (63)
	iteracion : FOR . '(' ID '=' CTE_INT ID comparador expresion ';' incr_decr CTE_INT ')' bloque_ejecutables  (64)
	iteracion : FOR . '(' ID '=' CTE_INT ';' ID comparador expresion incr_decr CTE_INT ')' bloque_ejecutables  (65)
	iteracion : FOR . '(' ID '=' CTE_INT ID comparador expresion incr_decr CTE_INT ')' bloque_ejecutables  (66)

	'('  shift 23
	.  error


state 6
	dec_procedimiento : PROC . ID '(' lista_parametros ')' NI '=' CTE_INT '{' conjunto_sentencias '}'  (14)
	dec_procedimiento : PROC . ID '(' ')' NI '=' CTE_INT '{' conjunto_sentencias '}'  (15)

	ID  shift 24
	.  error


state 7
	asignacion : ID . '=' expresion ';'  (27)
	asignacion : ID . COMP expresion ';'  (28)
	llamada : ID . '(' parametros ')' ';'  (57)
	llamada : ID . '(' ')' ';'  (58)
	llamada : ID . '(' parametros ';'  (59)

	COMP  shift 25
	'('  shift 26
	'='  shift 27
	.  error


state 8
	$accept : programa . $end  (0)

	$end  accept


state 9
	programa : conjunto_sentencias .  (1)

	.  reduce 1


state 10
	conjunto_sentencias : sentencia .  (2)
	conjunto_sentencias : sentencia . conjunto_sentencias  (3)

	IF  shift 1
	OUT  shift 2
	INTEGER  shift 3
	FLOAT  shift 4
	FOR  shift 5
	PROC  shift 6
	ID  shift 7
	$end  reduce 2
	'}'  reduce 2

	conjunto_sentencias  goto 28
	sentencia  goto 10
	declarativa  goto 11
	ejecutable  goto 12
	dec_variable  goto 13
	dec_procedimiento  goto 14
	tipo  goto 15
	asignacion  goto 16
	seleccion  goto 17
	salida  goto 18
	llamada  goto 19
	iteracion  goto 20


state 11
	sentencia : declarativa .  (4)

	.  reduce 4


state 12
	sentencia : ejecutable .  (5)

	.  reduce 5


state 13
	declarativa : dec_variable .  (6)

	.  reduce 6


state 14
	declarativa : dec_procedimiento .  (7)

	.  reduce 7


state 15
	dec_variable : tipo . lista_variables ';'  (8)
	dec_variable : tipo . error ';'  (9)

	error  shift 29
	ID  shift 30
	.  error

	lista_variables  goto 31


state 16
	ejecutable : asignacion .  (22)

	.  reduce 22


state 17
	ejecutable : seleccion .  (23)

	.  reduce 23


state 18
	ejecutable : salida .  (24)

	.  reduce 24


state 19
	ejecutable : llamada .  (25)

	.  reduce 25


state 20
	ejecutable : iteracion .  (26)

	.  reduce 26


state 21
	seleccion : IF '(' . expresion comparador expresion ')' THEN bloque_ejecutables END_INF  (43)
	seleccion : IF '(' . expresion comparador expresion ')' THEN bloque_ejecutables ELSE bloque_ejecutables END_INF  (44)
	seleccion : IF '(' . expresion comparador expresion THEN bloque_ejecutables END_INF  (45)
	seleccion : IF '(' . expresion comparador expresion THEN bloque_ejecutables ELSE bloque_ejecutables END_INF  (46)

	ID  shift 32
	CTE_INT  shift 33
	CTE_FLOAT  shift 34
	'-'  shift 35
	.  error

	expresion  goto 36
	termino  goto 37
	factor  goto 38


state 22
	salida : OUT '(' . CADENA ')' ';'  (56)

	CADENA  shift 39
	.  error


state 23
	iteracion : FOR '(' . ID '=' CTE_INT ';' ID comparador expresion ';' incr_decr CTE_INT ')' bloque_ejecutables  (63)
	iteracion : FOR '(' . ID '=' CTE_INT ID comparador expresion ';' incr_decr CTE_INT ')' bloque_ejecutables  (64)
	iteracion : FOR '(' . ID '=' CTE_INT ';' ID comparador expresion incr_decr CTE_INT ')' bloque_ejecutables  (65)
	iteracion : FOR '(' . ID '=' CTE_INT ID comparador expresion incr_decr CTE_INT ')' bloque_ejecutables  (66)

	ID  shift 40
	.  error


state 24
	dec_procedimiento : PROC ID . '(' lista_parametros ')' NI '=' CTE_INT '{' conjunto_sentencias '}'  (14)
	dec_procedimiento : PROC ID . '(' ')' NI '=' CTE_INT '{' conjunto_sentencias '}'  (15)

	'('  shift 41
	.  error


state 25
	asignacion : ID COMP . expresion ';'  (28)

	ID  shift 32
	CTE_INT  shift 33
	CTE_FLOAT  shift 34
	'-'  shift 35
	.  error

	expresion  goto 42
	termino  goto 37
	factor  goto 38


state 26
	llamada : ID '(' . parametros ')' ';'  (57)
	llamada : ID '(' . ')' ';'  (58)
	llamada : ID '(' . parametros ';'  (59)

	ID  shift 43
	')'  shift 44
	.  error

	parametros  goto 45


state 27
	asignacion : ID '=' . expresion ';'  (27)

	ID  shift 32
	CTE_INT  shift 33
	CTE_FLOAT  shift 34
	'-'  shift 35
	.  error

	expresion  goto 46
	termino  goto 37
	factor  goto 38


state 28
	conjunto_sentencias : sentencia conjunto_sentencias .  (3)

	.  reduce 3


state 29
	dec_variable : tipo error . ';'  (9)

	';'  shift 47
	.  error


state 30
	lista_variables : ID .  (12)
	lista_variables : ID . ',' lista_variables  (13)

	','  shift 48
	';'  reduce 12


state 31
	dec_variable : tipo lista_variables . ';'  (8)

	';'  shift 49
	.  error


state 32
	factor : ID .  (38)

	.  reduce 38


state 33
	factor : CTE_INT .  (39)

	.  reduce 39


state 34
	factor : CTE_FLOAT .  (40)

	.  reduce 40


state 35
	factor : '-' . CTE_INT  (41)
	factor : '-' . CTE_FLOAT  (42)

	CTE_INT  shift 50
	CTE_FLOAT  shift 51
	.  error


state 36
	expresion : expresion . '+' termino  (29)
	expresion : expresion . '-' termino  (30)
	expresion : expresion . '+' '+' termino  (32)
	seleccion : IF '(' expresion . comparador expresion ')' THEN bloque_ejecutables END_INF  (43)
	seleccion : IF '(' expresion . comparador expresion ')' THEN bloque_ejecutables ELSE bloque_ejecutables END_INF  (44)
	seleccion : IF '(' expresion . comparador expresion THEN bloque_ejecutables END_INF  (45)
	seleccion : IF '(' expresion . comparador expresion THEN bloque_ejecutables ELSE bloque_ejecutables END_INF  (46)

	MAYOR_IGUAL  shift 52
	MENOR_IGUAL  shift 53
	COMP  shift 54
	DISTINTO  shift 55
	'+'  shift 56
	'-'  shift 57
	'<'  shift 58
	'>'  shift 59
	.  error

	comparador  goto 60


state 37
	expresion : termino .  (31)
	termino : termino . '/' factor  (33)
	termino : termino . '*' factor  (34)
	termino : termino . '/' '/' factor  (36)
	termino : termino . '*' '*' factor  (37)

	'/'  shift 61
	'*'  shift 62
	THEN  reduce 31
	UP  reduce 31
	DOWN  reduce 31
	MAYOR_IGUAL  reduce 31
	MENOR_IGUAL  reduce 31
	COMP  reduce 31
	DISTINTO  reduce 31
	';'  reduce 31
	')'  reduce 31
	'+'  reduce 31
	'-'  reduce 31
	'<'  reduce 31
	'>'  reduce 31


state 38
	termino : factor .  (35)

	.  reduce 35


state 39
	salida : OUT '(' CADENA . ')' ';'  (56)

	')'  shift 63
	.  error


state 40
	iteracion : FOR '(' ID . '=' CTE_INT ';' ID comparador expresion ';' incr_decr CTE_INT ')' bloque_ejecutables  (63)
	iteracion : FOR '(' ID . '=' CTE_INT ID comparador expresion ';' incr_decr CTE_INT ')' bloque_ejecutables  (64)
	iteracion : FOR '(' ID . '=' CTE_INT ';' ID comparador expresion incr_decr CTE_INT ')' bloque_ejecutables  (65)
	iteracion : FOR '(' ID . '=' CTE_INT ID comparador expresion incr_decr CTE_INT ')' bloque_ejecutables  (66)

	'='  shift 64
	.  error


state 41
	dec_procedimiento : PROC ID '(' . lista_parametros ')' NI '=' CTE_INT '{' conjunto_sentencias '}'  (14)
	dec_procedimiento : PROC ID '(' . ')' NI '=' CTE_INT '{' conjunto_sentencias '}'  (15)

	VAR  shift 65
	ID  shift 66
	')'  shift 67
	.  error

	lista_parametros  goto 68
	parametro  goto 69


state 42
	asignacion : ID COMP expresion . ';'  (28)
	expresion : expresion . '+' termino  (29)
	expresion : expresion . '-' termino  (30)
	expresion : expresion . '+' '+' termino  (32)

	';'  shift 70
	'+'  shift 56
	'-'  shift 57
	.  error


state 43
	parametros : ID .  (60)
	parametros : ID . ',' ID  (61)
	parametros : ID . ',' ID ',' ID  (62)

	','  shift 71
	';'  reduce 60
	')'  reduce 60


state 44
	llamada : ID '(' ')' . ';'  (58)

	';'  shift 72
	.  error


state 45
	llamada : ID '(' parametros . ')' ';'  (57)
	llamada : ID '(' parametros . ';'  (59)

	';'  shift 73
	')'  shift 74
	.  error


state 46
	asignacion : ID '=' expresion . ';'  (27)
	expresion : expresion . '+' termino  (29)
	expresion : expresion . '-' termino  (30)
	expresion : expresion . '+' '+' termino  (32)

	';'  shift 75
	'+'  shift 56
	'-'  shift 57
	.  error


state 47
	dec_variable : tipo error ';' .  (9)

	.  reduce 9


state 48
	lista_variables : ID ',' . lista_variables  (13)

	ID  shift 30
	.  error

	lista_variables  goto 76


state 49
	dec_variable : tipo lista_variables ';' .  (8)

	.  reduce 8


state 50
	factor : '-' CTE_INT .  (41)

	.  reduce 41


state 51
	factor : '-' CTE_FLOAT .  (42)

	.  reduce 42


state 52
	comparador : MAYOR_IGUAL .  (50)

	.  reduce 50


state 53
	comparador : MENOR_IGUAL .  (51)

	.  reduce 51


state 54
	comparador : COMP .  (49)

	.  reduce 49


state 55
	comparador : DISTINTO .  (52)

	.  reduce 52


state 56
	expresion : expresion '+' . termino  (29)
	expresion : expresion '+' . '+' termino  (32)

	ID  shift 32
	CTE_INT  shift 33
	CTE_FLOAT  shift 34
	'+'  shift 77
	'-'  shift 35
	.  error

	termino  goto 78
	factor  goto 38


state 57
	expresion : expresion '-' . termino  (30)

	ID  shift 32
	CTE_INT  shift 33
	CTE_FLOAT  shift 34
	'-'  shift 35
	.  error

	termino  goto 79
	factor  goto 38


state 58
	comparador : '<' .  (47)

	.  reduce 47


state 59
	comparador : '>' .  (48)

	.  reduce 48


state 60
	seleccion : IF '(' expresion comparador . expresion ')' THEN bloque_ejecutables END_INF  (43)
	seleccion : IF '(' expresion comparador . expresion ')' THEN bloque_ejecutables ELSE bloque_ejecutables END_INF  (44)
	seleccion : IF '(' expresion comparador . expresion THEN bloque_ejecutables END_INF  (45)
	seleccion : IF '(' expresion comparador . expresion THEN bloque_ejecutables ELSE bloque_ejecutables END_INF  (46)

	ID  shift 32
	CTE_INT  shift 33
	CTE_FLOAT  shift 34
	'-'  shift 35
	.  error

	expresion  goto 80
	termino  goto 37
	factor  goto 38


state 61
	termino : termino '/' . factor  (33)
	termino : termino '/' . '/' factor  (36)

	ID  shift 32
	CTE_INT  shift 33
	CTE_FLOAT  shift 34
	'-'  shift 35
	'/'  shift 81
	.  error

	factor  goto 82


state 62
	termino : termino '*' . factor  (34)
	termino : termino '*' . '*' factor  (37)

	ID  shift 32
	CTE_INT  shift 33
	CTE_FLOAT  shift 34
	'-'  shift 35
	'*'  shift 83
	.  error

	factor  goto 84


state 63
	salida : OUT '(' CADENA ')' . ';'  (56)

	';'  shift 85
	.  error


state 64
	iteracion : FOR '(' ID '=' . CTE_INT ';' ID comparador expresion ';' incr_decr CTE_INT ')' bloque_ejecutables  (63)
	iteracion : FOR '(' ID '=' . CTE_INT ID comparador expresion ';' incr_decr CTE_INT ')' bloque_ejecutables  (64)
	iteracion : FOR '(' ID '=' . CTE_INT ';' ID comparador expresion incr_decr CTE_INT ')' bloque_ejecutables  (65)
	iteracion : FOR '(' ID '=' . CTE_INT ID comparador expresion incr_decr CTE_INT ')' bloque_ejecutables  (66)

	CTE_INT  shift 86
	.  error


state 65
	parametro : VAR . ID  (20)
	parametro : VAR . VAR ID  (21)

	VAR  shift 87
	ID  shift 88
	.  error


state 66
	parametro : ID .  (19)

	.  reduce 19


state 67
	dec_procedimiento : PROC ID '(' ')' . NI '=' CTE_INT '{' conjunto_sentencias '}'  (15)

	NI  shift 89
	.  error


state 68
	dec_procedimiento : PROC ID '(' lista_parametros . ')' NI '=' CTE_INT '{' conjunto_sentencias '}'  (14)

	')'  shift 90
	.  error


state 69
	lista_parametros : parametro .  (16)
	lista_parametros : parametro . ',' parametro  (17)
	lista_parametros : parametro . ',' parametro ',' parametro  (18)

	','  shift 91
	')'  reduce 16


state 70
	asignacion : ID COMP expresion ';' .  (28)

	.  reduce 28


state 71
	parametros : ID ',' . ID  (61)
	parametros : ID ',' . ID ',' ID  (62)

	ID  shift 92
	.  error


state 72
	llamada : ID '(' ')' ';' .  (58)

	.  reduce 58


state 73
	llamada : ID '(' parametros ';' .  (59)

	.  reduce 59


state 74
	llamada : ID '(' parametros ')' . ';'  (57)

	';'  shift 93
	.  error


state 75
	asignacion : ID '=' expresion ';' .  (27)

	.  reduce 27


state 76
	lista_variables : ID ',' lista_variables .  (13)

	.  reduce 13


state 77
	expresion : expresion '+' '+' . termino  (32)

	ID  shift 32
	CTE_INT  shift 33
	CTE_FLOAT  shift 34
	'-'  shift 35
	.  error

	termino  goto 94
	factor  goto 38


state 78
	expresion : expresion '+' termino .  (29)
	termino : termino . '/' factor  (33)
	termino : termino . '*' factor  (34)
	termino : termino . '/' '/' factor  (36)
	termino : termino . '*' '*' factor  (37)

	'/'  shift 61
	'*'  shift 62
	THEN  reduce 29
	UP  reduce 29
	DOWN  reduce 29
	MAYOR_IGUAL  reduce 29
	MENOR_IGUAL  reduce 29
	COMP  reduce 29
	DISTINTO  reduce 29
	';'  reduce 29
	')'  reduce 29
	'+'  reduce 29
	'-'  reduce 29
	'<'  reduce 29
	'>'  reduce 29


state 79
	expresion : expresion '-' termino .  (30)
	termino : termino . '/' factor  (33)
	termino : termino . '*' factor  (34)
	termino : termino . '/' '/' factor  (36)
	termino : termino . '*' '*' factor  (37)

	'/'  shift 61
	'*'  shift 62
	THEN  reduce 30
	UP  reduce 30
	DOWN  reduce 30
	MAYOR_IGUAL  reduce 30
	MENOR_IGUAL  reduce 30
	COMP  reduce 30
	DISTINTO  reduce 30
	';'  reduce 30
	')'  reduce 30
	'+'  reduce 30
	'-'  reduce 30
	'<'  reduce 30
	'>'  reduce 30


state 80
	expresion : expresion . '+' termino  (29)
	expresion : expresion . '-' termino  (30)
	expresion : expresion . '+' '+' termino  (32)
	seleccion : IF '(' expresion comparador expresion . ')' THEN bloque_ejecutables END_INF  (43)
	seleccion : IF '(' expresion comparador expresion . ')' THEN bloque_ejecutables ELSE bloque_ejecutables END_INF  (44)
	seleccion : IF '(' expresion comparador expresion . THEN bloque_ejecutables END_INF  (45)
	seleccion : IF '(' expresion comparador expresion . THEN bloque_ejecutables ELSE bloque_ejecutables END_INF  (46)

	THEN  shift 95
	')'  shift 96
	'+'  shift 56
	'-'  shift 57
	.  error


state 81
	termino : termino '/' '/' . factor  (36)

	ID  shift 32
	CTE_INT  shift 33
	CTE_FLOAT  shift 34
	'-'  shift 35
	.  error

	factor  goto 97


state 82
	termino : termino '/' factor .  (33)

	.  reduce 33


state 83
	termino : termino '*' '*' . factor  (37)

	ID  shift 32
	CTE_INT  shift 33
	CTE_FLOAT  shift 34
	'-'  shift 35
	.  error

	factor  goto 98


state 84
	termino : termino '*' factor .  (34)

	.  reduce 34


state 85
	salida : OUT '(' CADENA ')' ';' .  (56)

	.  reduce 56


state 86
	iteracion : FOR '(' ID '=' CTE_INT . ';' ID comparador expresion ';' incr_decr CTE_INT ')' bloque_ejecutables  (63)
	iteracion : FOR '(' ID '=' CTE_INT . ID comparador expresion ';' incr_decr CTE_INT ')' bloque_ejecutables  (64)
	iteracion : FOR '(' ID '=' CTE_INT . ';' ID comparador expresion incr_decr CTE_INT ')' bloque_ejecutables  (65)
	iteracion : FOR '(' ID '=' CTE_INT . ID comparador expresion incr_decr CTE_INT ')' bloque_ejecutables  (66)

	ID  shift 99
	';'  shift 100
	.  error


state 87
	parametro : VAR VAR . ID  (21)

	ID  shift 101
	.  error


state 88
	parametro : VAR ID .  (20)

	.  reduce 20


state 89
	dec_procedimiento : PROC ID '(' ')' NI . '=' CTE_INT '{' conjunto_sentencias '}'  (15)

	'='  shift 102
	.  error


state 90
	dec_procedimiento : PROC ID '(' lista_parametros ')' . NI '=' CTE_INT '{' conjunto_sentencias '}'  (14)

	NI  shift 103
	.  error


state 91
	lista_parametros : parametro ',' . parametro  (17)
	lista_parametros : parametro ',' . parametro ',' parametro  (18)
